fix: btm horizontal spacing

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -77,6 +77,11 @@ body {
     font-weight: 400;
 }
 
+#nvim_btm_section2 {
+    position: absolute;
+    right: 0;
+}
+
 .tilde {
     background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' width='10' height='20'><text x='0' y='16' fill='%23C6D1F1' font-family='CommitMono'>~</text></svg>");
     background-repeat: repeat-y;
